# ascend310_yolov8_pyb

./: CMakeLists.txt  README.md  aipp.cfg  fusion_result.json  ge_check_op.json  orangepiAIpro  orangepiAIpro.pub  sampleYOLOV7_old.cpp  test.py
include/: basic.h  type_api.h
src/: sampleYOLOV7.cpp
